# ffip

./: .gitignore  CMakeLists.txt  README.md  config.json
app/: CMakeLists.txt  Dipole_Test.cpp  Dipole_Test.m  Dipole_Test_std.m  Mie_Test.cpp  N2F_Test.cpp  N2F_Test.m  N2F_Test_From_Currents.m  N2F_Test_From_Raw_Fields.m  Plane_Wave_Test.cpp  Plane_Wave_Test.m  SDS.h5  Temp_Test.cpp  config.json  config2.json  config_path.m  cpp_test.cpp  create_dataset_example.h5  dipole_Au_material.py  dipole_fic_material.py  dipole_test_meep.py  ffip.cpp  hd5_test.cpp  json_test.cpp  live_script.mlx  parallel_dataset_example.h5  plane_wave_Au.py  plane_wave_fic_material.py  run_sim_json.cpp  sphere_scatter.py  sphere_scatter_ffip.py  sphere_scatter_meep.py  standard_configuration_file.txt  std_config.cpp  std_config.json  test.h5  test.m  test.py  test1.cpp  test1.m  (+8 more)
app/Dipole Test/: Au2.m  Dipole_Test.cpp  Dipole_Test.m  Dipole_Test_VarFreq.m  Dipole_Test_VarPos.m  Dipole_Test_VarPos_Fast.m  Dipole_Test_std.m  Dipole_far_field.m  N2F_Test.cpp
app/HAMR Inverse/: Au.m  Au_print.m  Mie2_ab.m  Mie2_cd.m  Mie_pt.m  bowtie_aperture.m  call_exe.m  check_simulation_config.m  convergence_check.m  create_case.m  optimization.m  split_ring.m  test.m
app/Inverse Planar Circle/: Au2_print.m  convergence_check.m  create_case.asv  create_case.m  create_case_and_visualize.m  optimization.asv  optimization.m  std_config  temp.m
app/Inverse Sphere/: adjoint.m  create_case.m  forward.m  objective.m  optimization.m  point_maximization.m  sql.m
app/Lollipop/: create_case_and_visualize.m
app/Mie Test Matlab Scripts/: Ag.m  Ag_print.m  Au2.m  Au2_print.m  Mie.m  Mie_S12.m  Mie_abcd.m  Mie_pt.m  mie_coef.m  mie_coef_test.m  mie_farfield_test.m  mie_farfield_varfreq.m  mie_farfield_varpos.m  mie_nearfield_varpos.m  mie_nearfield_varpos_fast.m  mie_test.m  mie_test_std_config.m  produce_medium_data.m  std_config  vis.m  vis_projector.m
app/Mie Theory Test/: mie_coef.m  mie_farfield_varfreq.m  mie_farfield_varpos.m  mie_nearfield_varpos.m  mie_nearfield_varpos_fast.m
app/Plane Wave Test/: plane_wave.m
app/Sensitivity Validation/: build_case.m  optimization.m  reciprocal_check.m  reciprocal_check2.m  reciprocal_check_blob.m  reciprocal_check_inhom.m  sensitivity.m  std_config
app/ffip/: __init__.py  adjoint.py  geom.py  materials.py  simulation.py  source.py
app/test/: plane_wave.py
app/utility/: call_exe.m  decomp.m  gen_config.m  get_abs_fields.m  get_gradient.m  make_2segment.m  make_interp_region.m  read_fields.m  ricker.m  test.m
app/utility/Geometry/: extend_inhom.m  make_disk.m  make_inhom.m  make_interp_region.m  make_rect.m  test.m
app/utility/Medium/: Ag.m  Air.m  Au.m  Au2.m  Au_minus_Air.m  add.m  cp.m  deybe.m  drude.m  fic1.m  fic1_minus_Air.m  lorentz.m  mult.m  sing_freq.m
ffip/: __init__.py  geom.py  materials.py  param_materials.py  simulation.py  source.py
include/: analysis.hpp  chunk.hpp  dft.hpp  fields.hpp  geometry.hpp  medium.hpp  simulation.hpp  source.hpp  structure.hpp  utility.hpp
py/: CMakeLists.txt  greet.cpp  greet.py
py/ffip/: ffip.py  geom.py  materials.py  simulation.py  source.py
scripts/: IIR_model_test.py  adjoint_volume2_test.py  bowtie_antenna.py  check_sensitivity.py  config.json  cross_zero_check.py  debug1.txt  dipole_Au_material.py  dipole_fic_material.py  disk_adjoint.py  disk_adjoint_check.py  four spikes initial guess.py  general_medium_test.py  param_medium_box_test.py  param_medium_test.py  plane_wave_Au.py  plane_wave_Au_meep.py  plane_wave_fic_material.py  read_dft.m  read_geom.m  sphere_scatter_ffip.py  std_config.json  test.m  test.py  test2.m  test2.m~  transpose test.py  x11_test.py
scripts/basic tests/: dipole_FePt_material.py  gaussian_beam_test.py  geom_info_test.py  inhom_geom_test.py  plane_wave_Au.py  plane_wave_fic.py  sphere_scatter.py
scripts/ffip/: geom.py  materials.py  simulation.py
scripts/four spikes/: filter_gen.py  optimize.py
scripts/optimizations/: bone_antenna.py  bowtie_antenna.py  bowtie_antenna1.py  bowtie_antenna1_nonlinear.py  bowtie_antenna2.py  bowtie_antenna2_FePt_Flux.py  bowtie_antenna2_FePt_Flux_filtered.py  bowtie_antenna_peaks.py  bowtie_aperture_fieldsrecov.py  disk_adjoint.py  disk_antenna.py
scripts/rectangular temp/: filter_gen.py  initial_guess.py  optimize.py
scripts/sensitivity tests/: box_vary_perm.py  box_vary_perm_nonlinear.py  check_sensitivity.py  disk_vary_r.py  disk_vary_r_filtered.py  disk_vary_r_filtered_nonlinear.py  disk_vary_r_filtered_thresh.py
src/: CMakeLists.txt  analysis.cpp  chunk.cpp  dft.cpp  fields.cpp  geometry.cpp  medium.cpp  simulation.cpp  source.cpp  structure.cpp  utility.cpp
test/: CMakeLists.txt  catch_practice.cpp  cgal_practice.cpp  hdf5_practice.cpp  json_practice.cpp  mpi_practice.cpp  mpi_test.cpp  pybind_practice.cpp  simulation_test.cpp  utility_test.cpp
