project(script)
add_executable(test1 test1.cpp)
target_link_libraries(test1 ffip)
add_executable(test2 test2.cpp)
target_link_libraries(test2 ffip)
add_executable(test3 test3.cpp)
target_link_libraries(test3 ffip)
add_executable(test4 test4.cpp)
target_link_libraries(test4 ffip)
add_executable(test5 test5.cpp)
target_link_libraries(test5 ffip)
